tests/integration/snapshots/integration__conformance__n_number_0e+.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 1
success: false
stdin ---
[0e+]
stdout ---

stderr ---
error: expected digit after exponent indicator, found `]`
 --> stdin:1:5
  |
1 | [0e+]
  |  ---^
  |  ||
  |  |exponent indicator found here
  |  number with exponent found here
